# Archivator

./: .gitignore  CMakeLists.txt  README.md  Untitled 1.ods
AudioPart/: flac.cpp
ImagePart/: CMakeLists.txt  Decoder.cpp  Decoder.h  Encoder.cpp  IFSTransform.cpp  IFSTransform.h  Image.cpp  Image.h  QuadTreeEncoder.cpp  QuadTreeEncoder.h  main.cpp
VideoPart/: codec.cpp  codec.h  compress.cpp  compress.h  decompress.cpp  decompress.h
include/audio/: FlacAlgo.hpp
include/controller/: Controller.hpp  IController.hpp  Parser.hpp  Selector.hpp
include/dto/: AlgorithmEnum.hpp  BitSteam.hpp  CommonInformation.hpp  Dto.hpp  MatrixInfo.hpp  Rect.hpp  WAWHeader.hpp
include/huffman/: HuffmanAlgo.hpp
include/image/: Decoder.hpp  Encoder.hpp  FractalAlgo.hpp  IFSTransform.hpp  Image.hpp  QuadTreeEncoder.hpp
include/video/: Profiler.hpp  QuantizationAlgo.hpp
include/view/: View.hpp
lib/AudioPart/: FlacAlgo.h  flac.cpp
lib/FractalCompressorImage/fractal-compression-master/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  IFSTransform.cpp  IFSTransform.h  Image.cpp  Image.h  Makefile  QuadTreeEncoder.cpp  QuadTreeEncoder.h  main.cpp
lib/Haffman/: HaffmanAlgo.cpp
lib/Huffman/: HuffmanAlgo.h
lib/ImagePart/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  FractalAlgo.h  IFSTransform.cpp  IFSTransform.h  Image.cpp  Image.h  QuadTreeEncoder.cpp  QuadTreeEncoder.h
lib/VideoPart/: Profiler.cpp  Profiler.hpp  QuantizationAlgo.h  codec.cpp  codec.h  compress.cpp  compress.h  decompress.cpp  decompress.h  log.txt  logger.cpp  logger.h  test.cpp  test.h  test.hpp
src/: CMakeLists.txt  main.cpp
src/audio/: FlacAlgo.cpp
src/controller/: Controller.cpp  Controller.h  IController.cpp  IController.h  Parser.cpp  Selector.cpp
src/dto/: AlgorithmEnum.h  BitSteam.cpp  BitSteam.h  CommonInformation.h  Dto.cpp  Dto.h  MatrixInfo.h  Rect.h  WAWHeader.h
src/huffman/: HuffmanAlgo.cpp
src/image/: Decoder.cpp  Encoder.cpp  FractalAlgo.cpp  IFSTransform.cpp  Image.cpp  QuadTreeEncoder.cpp
src/model/: Parser.cpp  Parser.h  Selector.cpp  Selector.h
src/video/: Profiler.cpp  QuantizationAlgo.cpp
src/view/: CMakeLists.txt  View.cpp  View.h  main.cpp
tst/: CMakeLists.txt
tst/testAudio/: BitSteam.h  FlacAlgo.h  WAWHeader.h  testAudio.cpp
tst/testController/: CMakeLists.txt  main.cpp
tst/testHaffman/: Haffman.h  example0.wav.hcf  example1.bmp.hcf  testHaffman.cpp
tst/testImage/: main.cpp
tst/testImage/storage/: Lena.json  Pingvin.json  sample.tga
tst/testParser/: CMakeLists.txt  main.cpp  testTxt1.txt  testTxt2.txt
tst/testVideo/: test.hpp
